Plus1 WapStart Android SDK 2.1.1, 2012-08-29
----------------------
- Fixed NPE in post-action body of banner animation context
- Fixed code using WebView pauseTimers/resumeTimers methods
- Release audio player when pause BartActivity
- Fix typo in Cookie header

Plus1 WapStart Android SDK 2.1.0, 2012-08-06
----------------------
- Added html5 play video feature
- Back key support for expanded layer
- Destroy WebView in UI thread after fadeout animation

Plus1 WapStart Android SDK 2.0.1, 2012-07-19
----------------------
- Send additional x-original-user-agent header

Plus1 WapStart Android SDK 2.0.0, 2012-07-09
----------------------
- Added MRAID API support
- WebView layer instead XML banner rendering
- Better integrate interfaces (BC is broken)
- Fixed known defects
- New markdown docs

Plus1 WapStart Android SDK 1.3, 2012-04-10
----------------------
- Fixed bug: default ViewStateListener breaks rotation of banners after few seconds
- Fixed bug: application crashes because of uncatched OutOfMemoryError and NullPointerException

Plus1 WapStart Android SDK 1.2, 2012-03-29
----------------------
- Fixed bug: application crashes while connection because of unexpected NullPointerException

Plus1 WapStart Android SDK 1.1, 2012-03-12
----------------------
- Fixed bug: network activity on the UI thread breaks application
- Fixed bug: invalid pageId generation