@@ -1,3 +1,8 @@
+Plus1 WapStart Android SDK 2.1.2, 2012-09-24
+----------------------
+- Fixed critical typo in ad animator
+- More safely calls of pauseTimers/resumeTimers methods (WebView)
+
 Plus1 WapStart Android SDK 2.1.1, 2012-08-29
 ----------------------
 - Fixed NPE in post-action body of banner animation context
